# CommitVigil

./: .dockerignore  .env.example  .gitignore  404.html  COMMERCIAL.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  demo.sh  docker-compose.yml  index.html  mkdocs.yml  objects.inv  prometheus.yml  pyproject.toml  seed_db.py  seed_log.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml
ORIENTATION/: index.html
adr/ADR-001-Safety-Supervisor/: index.html
adr/ADR-002-Sales-Intelligence-Layer/: index.html
docs/: ORIENTATION.md  index.md
docs/adr/: ADR-001-Safety-Supervisor.md  ADR-002-Sales-Intelligence-Layer.md
docs/guides/: feedback_loop.md  gitops.md  integrations.md  managers.md  production.md  quickstart.md  sales.md  slack.md
docs/operations/: RUNBOOK-001-Redis-Failure.md
docs/overviews/: agents.md  concept.md  customization.md  ethics.md  personas.md
docs/reference/: api.md  demo_script.md
docs/validation/: adversarial_test_results.md  performance_benchmarks.md  report_v1.html  safety_report.md  safety_validation_report.md
guides/feedback_loop/: index.html
guides/gitops/: index.html
guides/integrations/: index.html
guides/managers/: index.html
guides/production/: index.html
guides/quickstart/: index.html
guides/sales/: index.html
guides/slack/: index.html
infra/k8s/: deployment.yaml
infra/migrations/: env.py
migrations/: env.py
migrations/versions/: 6618f1ff6aa9_initial_migration.py
operations/RUNBOOK-001-Redis-Failure/: index.html
overviews/agents/: index.html
overviews/customization/: index.html
overviews/ethics/: index.html
reference/api/: index.html
reference/demo_script/: index.html
scripts/: demo.sh  demo_sales.sh
search/: search_index.json
src/: main.py  worker.py
src/agents/: brain.py  commitment_extractor.py  learning.py  performance.py  prospector.py  safety.py  scout.py
src/api/: deps.py  routes.py
src/api/v1/: feedback.py  (+6 more)
src/core/: config.py  constants.py  database.py  logging.py  monitoring.py  persona.py  reporting.py  slack.py  state.py  utils.py
src/llm/: base.py  factory.py  groq.py  mock.py  openai.py
src/schemas/: agents.py  context.py  performance.py
src/templates/: department_audit.html  landing_page.html  org_audit.html  user_audit.html
tests/: conftest.py  test_adaptive_persona.py  test_api.py  test_audit_coverage.py  test_brain.py  test_database.py  test_factory_and_db_edge.py  test_live_integration.py  test_llm.py  test_performance.py  test_performance_stress.py  test_reports_api.py  test_roadmap.py  test_safety_adversarial.py  test_slack.py  test_worker.py
(+4 files in other folders)
