[tool.poetry]
name = "commitguard-ai"
version = "0.1.0"
description = "CommitGuard AI is a standalone, AI-powered service designed to enforce human commitments."
license = "MIT"
authors = ["daretechie <deeprince2020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
instructor = "^1.13.0"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"
apscheduler = "^3.11.2"
prometheus-fastapi-instrumentator = "^7.1.0"
pytest = "^8.3.0"
arq = "^0.26.1"
redis = "^5.0.8"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
groq = "^1.0.0"
sqlmodel = "^0.0.31"
asyncpg = "^0.31.0"




[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest-cov = "^7.0.0"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

