[tool.poetry]
name = "commitvigil"
version = "0.1.0"
description = "CommitVigil is a standalone, AI-powered service designed to enforce human commitments and behavioral accountability."
license = "MIT"
authors = ["daretechie <deeprince2020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
instructor = "^1.14.4"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"
apscheduler = "^3.11.2"
prometheus-fastapi-instrumentator = "^7.1.0"
pytest = "^8.3.0"
arq = "^0.26.3"
redis = "^5.2.0"
jinja2 = "^3.1.3"
tenacity = "^9.1.2"
bandit = "^1.9.0"

pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
groq = "^1.0.0"
sqlmodel = "^0.0.31"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
psycopg2-binary = "^2.9.11"
fastapi-limiter = "^0.1.6"





[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest-cov = "^7.0.0"
mkdocs-material = "^9.7.1"
mkdocstrings = {extras = ["python"], version = "^1.0.2"}
mypy = "^1.19.1"
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*:",
    "ignore::DeprecationWarning:asyncio.*:",
    "ignore::RuntimeWarning:fastapi.*:",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["migrations/"]

